crates/plotnik-tests/tests/04-emit/types/alternations/error_conflict_skips_nested_scope_capture.txt
Q = [
  (identifier) @x
  {
    (string) @x
  } @row
  (number)* @x
]
------------------ DIAGNOSTICS -------------------
error: `@x` has incompatible types `Node | null` and `Node[]` across alternatives
 --> query.ptk:2:16
  |
2 |   (identifier) @x
  |                ^^
...
6 |   (number)* @x
  |             -- `@x` has type `Node[]` here
  |
help: make every alternative produce the same type, or label the alternatives for a variant type
